@@ -20,16 +20,14 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 167)
-(Parent-Version lpmud 3-3 166)
-(Version-Log "Corrected the compilation and call to dftables.
-remove_all_players() didn't check if the players were already destructed.
-Corrected copy_bits().
-Corrected the wrapping analysis in terminal_colour().
-Errors in add_action() would leak the action sentence.")
+(Project-Version lpmud 3-3 168)
+(Parent-Version lpmud 3-3 167)
+(Version-Log "Re-inserted the lines accidentally deleted from copy_bits() and corrected numerical overflow problems.
+Corrected some dodgy-looking code in the GC.
+Small correction in sprintf().")
 (New-Version-Log
 "")
-(Checkin-Time "Mon, 11 Feb 2002 19:27:46 -0700")
+(Checkin-Time "Wed, 13 Feb 2002 20:30:54 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -63,7 +61,7 @@ Errors in add_action() would leak the action sentence.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.5 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.35 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.230 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.231 644))
   (HISTORY (lpmud/f/49_HISTORY 1.241 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.13 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -98,7 +96,7 @@ Errors in add_action() would leak the action sentence.")
   (src/settings/heaven7 (lpmud/K/22_heaven7 1.3 644))
   (src/settings/hyperborea (lpmud/H/20_hyperborea 1.2 744))
   (src/settings/morgengrauen (lpmud/K/37_morgengrau 1.2 644))
-  (src/settings/osb (lpmud/C/8_osb 1.11 744))
+  (src/settings/osb (lpmud/C/8_osb 1.12 744))
   (src/settings/pkmud (lpmud/C/25_pkmud 1.5.1.2 744))
   (src/settings/psycmuve (lpmud/I/42_psycmuve 1.1.1.2 744))
   (src/settings/quovadis (lpmud/H/12_quovadis 1.1.1.4 744))
@@ -121,7 +119,7 @@ Errors in add_action() would leak the action sentence.")
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.4 644))
   (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.2 644))
   (src/bitstrings.h (lpmud/I/47_bitstrings 1.2 644))
-  (src/bitstrings.c (lpmud/I/48_bitstrings 1.7 644))
+  (src/bitstrings.c (lpmud/I/48_bitstrings 1.8 644))
   (src/call_out.h (lpmud/f/45_call_out.h 1.7.1.4 644))
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.17 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.5 644))
@@ -140,7 +138,7 @@ Errors in add_action() would leak the action sentence.")
   (src/files.c (lpmud/I/50_files.c 1.13 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.6 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.44 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.45 644))
   (src/hash.h (lpmud/f/32_hash.h 1.5 644))
   (src/hash.c (lpmud/c/28_hash.c 1.13 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
@@ -228,11 +226,11 @@ Errors in add_action() would leak the action sentence.")
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.5 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.11 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.22 644))
-  (src/simulate.c (lpmud/31_simulate.c 1.88.1.59 644))
+  (src/simulate.c (lpmud/31_simulate.c 1.88.1.60 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.7 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.41 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.2 644))
-  (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.34 644))
+  (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.35 644))
   (src/strfuns.h (lpmud/B/51_strfuns.h 1.11.1.4 644))
   (src/strfuns.c (lpmud/C/0_strfuns.c 1.9.1.10 644))
   (src/svalue.h (lpmud/f/39_datatypes. 1.34.1.15 644))
